# Aletheia

./: .gitignore  PROJECT_STATUS.md  README.md  SETUP.md  TESTING_GUIDE.md  jest.config.js  package.json
coverage/: index.html
coverage/lcov-report/: index.html
extension/src/: manifest.firefox.json  manifest.json
extension/src/background/: service-worker.js
extension/src/content/: content.css  content.js  verification-panel.js
extension/src/icons/: README.md
extension/src/popup/: popup.css  popup.html  popup.js
extension/src/shared/: browser-api.js
scripts/: build-extension.js  build-wasm.sh
tests/: browser-api.test.js  mime-type.test.js  setup.js  stats.test.js  verification-panel.test.js
veritas-core/: Cargo.toml
veritas-core/src/: lib.rs
